[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "walnutpi"
version = "1.0.2"
authors = [
    {name = "sc-bin", email = "3335447573@qq.com"},
]
description = "A module to import all walnutpi libs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
]
keywords = ["walnutpi", "embedded", "library"]
dependencies = ["walnutpi-npu"]

[project.urls]
Homepage = "https://github.com/sc-bin/"
Repository = "https://github.com/sc-bin/"

[tool.hatch.build.targets.sdist]
include = [
    "/walnutpi",
]